<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PrototypeAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notification">NotificationActivity</string>

    <!-- Text view on main activity -->
    <string name="initial_text">Please wait …</string>

    <!-- Button labels -->
    <string name="label_locate">Locate</string>
    <string name="label_notify">Notify</string>
    <string name="label_alarm">ALARM</string>
    <string name="label_air">Air</string>
    <string name="label_radiation">Radiation</string>
    <string name="label_chemicals">Chemicals</string>
    <string name="label_dismiss">Dismiss</string>
    <string name="label_send">Send</string>

    <!-- Text view on notification activity -->
    <string name="initial_text_notification_text_view">Write here …</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- TESTActivity strings -->
    <string name="take_photo">take photo</string>
    <string name="send_photo">send photo</string>
    <string name="start_wearable_activity">start waerable activity</string>
    <string name="send_text">send text</string>
    <string name="title_activity_test_activity_two">TestActivityTwo</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- strings for wearable actions -->
    <string name="wearable_reply_label">Wearable Reply</string>
    <string-array name="wearable_reply_choices">
        <item>Gas leak</item>
        <item>Incident</item>
        <item>Help required</item>
    </string-array>

</resources>
