<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.peperzaken.prototypeandroid.NotificationActivity">

    <EditText
        android:id="@+id/notificationTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/notification_text_view_height"
        android:hint="@string/initial_text_notification_text_view"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:background="@color/text_view_background_color"
        android:inputType="text"
        android:textSize = "@dimen/notification_text_view_text_size"
        android:layout_alignParentStart="true"
        android:padding="@dimen/notification_text_view_text_padding"/>

    <RelativeLayout
        android:id="@+id/notificationFirstButtonsLine"
        android:layout_width="@dimen/buttons_line_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notificationTextView"
        android:layout_marginTop="@dimen/distance_between_elements"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true">
            <Button
                android:id="@+id/dismiss"
                android:background="@drawable/dismiss"
                android:layout_width="@dimen/buttons_img_size"
                android:layout_height="@dimen/buttons_img_size"
                android:onClick="dismiss"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dismiss"
                android:textColor="@color/white"
                android:textSize = "@dimen/labels_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_button_label"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentEnd="true">
            <Button
                android:id="@+id/send"
                android:background="@drawable/send"
                android:layout_width="@dimen/buttons_img_size"
                android:layout_height="@dimen/buttons_img_size"
                android:onClick="send"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_send"
                android:textColor="@color/white"
                android:textSize = "@dimen/labels_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_button_label"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
